--- a/cpp learn/1.数据类型.md
+++ b/cpp learn/1.数据类型.md
@@ -8,7 +8,7 @@
 | void   | 表示无类型，通常用于函数返回类型或指针类型 |
 | string (c++) | 字符串 |
 
-​	![image-20241105175352439](D:\code\c-cpp\learn\assets\image-20241105175352439.png)
+​	![image-20241105175352439](./assets/image-20241105175352439.png)
 
 | 复合数据类型               |                                                          |
 | -------------------------- | -------------------------------------------------------- |
