--- a/cpp learn/9.模板 -typename T-.md
+++ b/cpp learn/9.模板 -typename T-.md
@@ -45,7 +45,30 @@ int main() {
 }
 ```
 
+
 - `print<int>(10)` 是显式地调用 `print` 函数模板并指定模板参数 `int`，然后传递 `10` 作为参数。
+```c++
+#include <iostream>
+
+template <typename T>
+T func(T param) {
+    return param + param;
+}
+
+int main() {
+    int a = 5;
+    double b = 3.5;
+
+    // 自动推导模板参数
+    std::cout << func(a) << std::endl; // 输出 10
+    std::cout << func(b) << std::endl; // 输出 7.0
+
+    // 显式指定模板参数
+    std::cout << func<int>(3.5) << std::endl; // 输出 6
+    return 0;
+}
+```
+- 函数与模板结合
 
 ### 3. **类模板和成员函数的定义**
 
