--- a/cpp learn/10.类-重载运算符-命名空间.md
+++ b/cpp learn/10.类-重载运算符-命名空间.md
@@ -282,6 +282,22 @@ int main() {
 }
 //若同时导入了命名空间 n m，则需要分开调用func -- n::func() m::func()
 ```
-## 注意：
+### 注意：
 - **命名冲突**：当你在代码中使用 `using namespace` 时，可能会引入命名冲突。如果两个命名空间中有相同名称的成员（如 `func()`），则编译器会无法区分它们。为了避免这种问题，通常推荐在较小范围内使用 `using` 声明，或者明确使用命名空间前缀（如 `n::func()` 和 `m::func()`）。
 - **局部使用**：为了避免全局命名空间污染，建议尽量在局部范围内使用 `using namespace`，比如在函数内部使用，而不是在全局范围内导入整个命名空间。
+
+### namespace inline
+如果你在头文件中定义了一个非成员函数，并且该函数被多个源文件包含，使用 inline 是一种常见的做法，可以避免链接错误，特别是当你在多个源文件中包含同一个头文件时。
+```cpp
+// header.h
+namespace MyNamespace {
+    inline void greet() {
+        std::cout << "Hello, world!" << std::endl;
+    }
+}
+```
+
+- 避免多重定义错误：当你在头文件中定义 inline 函数时，可以避免链接错误。
+- 性能优化：对于小型且频繁调用的函数，inline 可以减少函数调用的开销。
+- 模板函数：在模板类中，inline 用于确保函数在多个源文件中不引起重复定义错误。
+- 编译器优化：虽然 inline 是编译器的建议，最终是否内联取决于编译器的实现。
